--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+*{
+    transition: .4s;
+}
 body{
     margin: 0;
     padding: 0;
@@ -10,6 +13,8 @@ body{
 
 .content-inner-wrapper{
     max-width: 1270px;
+    margin-left: 15px;
+    margin-right: 15px;
 }
 
 .main-wrapper{
@@ -19,14 +24,12 @@ body{
     margin: 0 auto;
 }
 
-.main-poster{
+.poster-section{
     display: flex;
     flex-direction: column;
     height: 700px;
     background: url("img/coffee-shop.png") no-repeat;
     background-size: cover;
-    margin-left: 15px;
-    margin-right: 15px;
 }
 
 .navigation{
@@ -52,7 +55,6 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    list-style: none;
     margin: 0;
     padding: 0;
     height: 100px;
@@ -65,7 +67,7 @@ body{
     font-weight: bold;
     font-style: normal;
     color: #ffffff;
-    font-size: 12pt;
+    font-size: 16px;
     cursor: pointer;
 }
 
@@ -77,21 +79,126 @@ body{
     margin: 0 38px;
     position: relative;
     bottom: -20px;
+    order: 2;
+}
+
+.menu-burger-container{
+    display: none;
+    position: relative;
+    height: 20px;
+    cursor: pointer;
+    width: 30px;
+    cursor: pointer;
+}
+.burger-btn{
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 26px;
+    height: 2px;
+    background-color: #FFFFFF;
+    transition: all .3s;
+}
+.menu-burger-container::before,
+.menu-burger-container::after {
+    content: '';
+    position: absolute;
+    width: 26px;
+    height: 2px;
+    left: 0;
+    background-color: #FFFFFF;
+    transition: all .3s;
+    z-index: 3;
+}
+
+.menu-burger-container::before {
+    top: 0;
+}
+
+.menu-burger-container::after {
+    bottom: 0;
+}
+
+.menu-burger-container.active .burger-btn {
+    opacity: 0;
+}
+
+.menu-burger-container.active::before {
+    top: 50%;
+    transform: translateY(50%) rotate(45deg);
+}
+
+.menu-burger-container.active::after {
+    top: 50%;
+    bottom: auto;
+    transform: translateY(50%) rotate(-45deg);
+}
+
+.menu_box {
+    display: none;
+}
+
+.menu_box.active {
+    display: block;
+    position: absolute;
+    top: -4px;
+    right: -2px;
+
+    width: 280px;
+    height: 300px;
+
+    margin: 0;
+    padding: 40px 0;
+
+    list-style: none;
+
+    border-radius: 20px;
+    background: rgba(0,0,0,.5);
+    box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
+
+    transition-duration: .3s;
+}
+
+.menu_item {
+    display: block;
+    padding: 12px 24px;
+
+    color: #333;
+
+    font-family: Playfair Display, Arial;
+    font-weight: bold;
+    font-style: normal;
+    color: #ffffff;
+    font-size: 16px;
+
+    text-decoration: none;
+
+    transition-duration: .3s;
+}
+
+.menu_item:hover {
+    background-color: #d4d4d4;
+    color: #f5d76e;
+}
+
+.navigation-item:nth-of-type(3), .navigation-item:nth-of-type(4),
+.navigation-item:nth-of-type(5){
+    order:3;
 }
 
 .poster-info{
     display: flex;
     flex-direction: column;
     margin: auto 0 auto 169px;
-    width: 444px;
+    max-width: 450px;
 }
 
-.poster-info > h1{
+.greeting{
     font-family: Playfair Display, Arial;
     font-weight: bold;
     font-style: normal;
     color: #f5d76e;
-    font-size: 36pt;
+    font-size: 48px;
     margin: 0;
     padding: 0;
 }
@@ -101,12 +208,12 @@ body{
     font-weight: 500;
     font-style: normal;
     color: #ffffff;
-    font-size: 16pt;
-    margin: 0;
+    font-size: 16px;
+    margin: 30px 0 0 0;
     padding: 0;
 }
 
-.poster-info > a{
+.white-btn{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -115,7 +222,7 @@ body{
     font-style: normal;
     color: #ffffff;
     margin-top: 40px;
-    font-size: 13pt;
+    font-size: 13px;
     border-style: solid;
     border-width: 2px;
     border-color: #FFFFFF;
@@ -127,7 +234,387 @@ body{
     outline: none;
 }
 
+.about-section{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 
+.caffe-motto{
+    font-family: Playfair Display, Arial;
+    font-weight: 500;
+    font-style: normal;
+    text-align: center;
+    font-size: 32px;
+    margin-top: 100px;
+    margin-bottom: 0;
+}
+
+.caffe-motto>b{
+    text-decoration: underline;
+}
+
+.about-section>p{
+    max-width: 755px;
+    text-align: center;
+    font-family: Lato, Arial;
+    font-weight: 500;
+    font-style: normal;
+    font-size: 16px;
+}
+
+.cup-img{
+    width: 40px;
+    height: 40px;
+}
+
+.about-section .cup-img{
+    margin: 80px 0;
+}
+
+.menu-section{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+.menu-section-name{
+    font-family: Playfair Display, Arial;
+    font-weight: bold;
+    font-style: normal;
+    font-size: 36px;
+    text-transform: uppercase;
+}
+
+.menu-list{
+    display: flex;
+    justify-content: space-between;
+}
+
+.menu-item{
+    display: flex;
+    flex: 0 1 30%;
+    flex-direction: column;
+    justify-content: start;
+    min-width: 300px;
+    max-width: 395px;
+}
+
+.menu-item:nth-child(2){
+    margin: 0 20px;
+}
+
+.menu-item > div:first-child{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.coffee-bg{
+    background: url("img/cup-of-coffee-bg.png") no-repeat center center;
+    height: 293px;
+}
+
+.tea-bg{
+    background: url("img/cup-of-tea-bg.png") no-repeat center center;
+    height: 293px;
+}
+
+.deserts-bg{
+    background: url("img/deserts-bg.png") no-repeat center center;
+    height: 293px;
+}
+
+.menu-header{
+    font-family: Playfair Display, Arial;
+    font-weight: bold;
+    font-style: normal;
+    font-size: 40px;
+    text-transform: uppercase;
+}
+
+.price-list{
+    display: flex;
+    flex-direction: column;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.price-list > li{
+    display: flex;
+    justify-content: space-between;
+}
+
+.price-list .item-name{
+    font-family: Lato, Arial;
+    font-weight: 900;
+    font-style: normal;
+    font-size: 16px;
+    text-align: start;
+    margin-left: 30px;
+}
+
+.price-list .item-price{
+    font-family: Lato, Arial;
+    font-weight: 500;
+    font-style: normal;
+    font-size: 16px;
+    margin-right: 30px;
+}
+
+.menu-section .cup-img{
+    margin: 70px 0;
+    align-self: center;
+}
+
+.personalize-coffee-section{
+    text-align: center;
+    min-width: 0;
+}
+
+.personalize-section-name{
+    font-family: Playfair Display, Arial;
+    font-weight: bold;
+    font-style: normal;
+    font-size: 36px;
+    text-transform: uppercase;
+    margin: 0 0 30px 0;
+    padding: 0;
+}
+
+.slider-container {
+    min-height: 200px;
+    flex-basis: 100%;
+    max-height: 450px;
+    position: relative;
+}
+
+.slide {
+    flex-basis: 100%;
+    max-width: 320px;
+    min-height: 350px;
+    max-height: 450px;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+    transition: .33s;
+    background: linear-gradient(to bottom, transparent 65%, #F2F2F2 35%);
+}
+
+.slide p{
+    margin: 0;
+    padding: 0;
+}
+
+.product-name{
+    font-family: Playfair Display, Arial;
+    font-weight: 500;
+    font-style: normal;
+    text-transform: uppercase;
+    font-size: 16px;
+    margin: 10px;
+}
+
+.product-description{
+    font-family: Playfair Display, Arial;
+    font-weight: normal;
+    font-style: normal;
+    font-size: 12px;
+}
+
+.product-price{
+    font-family: Playfair Display, Arial;
+    font-weight: bold;
+    font-style: normal;
+    font-size: 16px;
+    margin: 10px;
+}
+
+.swiper-button-next::after,
+.swiper-button-prev::after {
+    display: none;
+}
+
+.swiper-button-next,
+.swiper-button-prev {
+    width: 50px;
+    height: 50px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+.swiper-button-next {
+    margin-right: 20px;
+    background-image: url("img/right_arrow.png");
+}
+
+.swiper-button-prev {
+    margin-left: 20px;
+    background-image: url("img/left_arrow.png");
+}
+
+.personalize-coffee-section .cup-img{
+    margin: 80px 0;
+    align-self: center;
+}
+
+.location-section{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 15px;
+}
+
+.location-name-section{
+    font-family: Playfair Display, Arial;
+    font-weight: bold;
+    font-style: normal;
+    font-size: 36px;
+    text-transform: uppercase;
+    margin: 0 0 50px 0;
+    padding: 0;
+    text-align: center;
+}
+
+.location-row{
+    display: flex;
+}
+
+.location-info{
+    flex: 1 1 50%;
+    background-color: #f5d76e;
+}
+
+.location-info h4{
+    font-family: Playfair Display, Arial;
+    font-weight: bold;
+    font-style: normal;
+    font-size: 20px;
+    text-transform: uppercase;
+    margin-left: 55px;
+}
+
+.location-info p{
+    margin-left: 55px;
+    font-family: Lato, Arial;
+    font-weight: 500;
+    font-style: normal;
+    font-size: 16px;
+}
+
+.location-map{
+    flex: 0 1 30%;
+}
+
+footer{
+    background-color: #39312f;
+    margin: 0 auto;
+}
+
+.footer-information{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    max-width: 1300px;
+    margin: 0 auto;
+}
+
+.social-sites{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-family: "Font Awesome 5 Brands";
+    width: 130px;
+    height: 30px;
+    margin: 90px 0 16px 0;
+}
+
+.social-sites > a {
+    text-decoration: none;
+}
+
+.social-sites > a > i {
+    color: #ffffff;
+    font-size: 24px;
+}
+
+.social-sites > a > i:hover {
+    color: #f5d76e;
+}
+
+.address{
+    font-family: Lato, Arial;
+    font-weight: 900;
+    font-style: normal;
+    font-size: 16px;
+    padding: 0;
+    color: #ffffff;
+}
+
+.copyrighting{
+    font-family: Lato, Arial;
+    font-weight: 900;
+    font-style: normal;
+    font-size: 14px;
+    color: #f5d76e;
+    margin: 0 0 15px 0;
+    padding: 0;
+}
+
+
+@media screen and (max-width: 1023px) {
+    .menu-list{
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .poster-info{
+        margin-left: 80px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .poster-section{
+        margin: 0;
+    }
+
+    .menu-list{
+        flex-wrap: nowrap;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .menu-item:nth-child(2){
+        margin: 0;
+    }
+
+    .poster-info{
+        margin-left: 10px;
+    }
+
+    .location-row{
+        flex-direction: column;
+    }
+
+    .menu-burger-container{
+        display: inline;
+    }
+
+    .logo{
+        order: -1;
+        margin-left: 0;
+        margin-right: 30px;
+    }
+
+    .navigation-item{
+        display: none;
+    }
+}
 
 @font-face {
     font-family: 'Playfair Display';
@@ -181,5 +668,16 @@ body{
     url('fonts/Lato-Heavy.woff') format('woff'),
     url('fonts/Lato-Heavy.ttf') format('truetype');
     font-weight: 900;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "Font Awesome 5 Brands";
+    src: url('fonts/fa-brands-400.eot');
+    src: url('fonts/fa-brands-400.eot?#iefix') format('embedded-opentype'),
+    url('fonts/fa-brands-400.woff2') format('woff2'),
+    url('fonts/fa-brands-400.woff') format('woff'),
+    url('fonts/fa-brands-400.ttf') format('truetype');
+    font-weight: normal;
     font-style: normal;
 }
